--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&family=Poppins:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap" rel="stylesheet">
     <title>Weather Checker</title>
 </head>
 <body>
     <div class="centerPanel">
+    <div class="resultDiv">
+        <p class="locationTitle"></p>
+        <p class="temperatureDisplay"></p>
+        <p class="weatherD"></p>
+        <img src="" alt="" class="iconDisplay">
+    </div>
     <div class="giphyImgDiv">
-        <img src="" alt="" id="giphyImg">
+        <img src="./svgs/images/startingscreen.jpg" alt="" id="giphyImg">
     </div>
     <div class="formContainer">
         <form action="" method="get" id="weatherForm">
             <div>
             <label for="location" class="formLabels">Location</label>
-            <input type="text" name="location" id="location" class="txtInputs">
+            <input type="text" name="location" id="location" class="txtInputs" autocomplete="off">
             </div>
             <div>
             <label for="tempDisplay">Display in:</label>
             <select name="tempDisplay" id="tempDisplay">
-                <option value="fahrenheit">Fahrenheit</option>
+                <option value="Fahrenheit">Fahrenheit</option>
                 <option value="Celsius" selected>Celsius</option>
             </select>
             </div>
